@@ -1,7 +1,7 @@
 Package: fCalendar
-Version: 270.78.2
-Revision: 4033
-Date: 2009-04-15
+Version: 270.78.3
+Revision: 4191
+Date: 2009-05-25
 Title: Chronological and Calendarical Objects
 Author: Diethelm Wuertz, Yohan Chalabi
 Depends: R (>= 2.4.0), methods, MASS, fUtilities, fEcofin
@@ -16,6 +16,6 @@ LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
 URL: http://www.rmetrics.org
-Packaged: 2009-04-15 17:34:33 UTC; yankee
+Packaged: 2009-05-25 11:05:25 UTC; yankee
 Repository: CRAN
-Date/Publication: 2009-04-16 07:00:06
+Date/Publication: 2009-05-25 20:24:14
