@@ -1,3 +1,8 @@
+2009-05-25  chalabi
+
+	* R/zzz.R: use packageStartupMessage rather than message for all
+	  the message.
+
 2009-04-02  chalabi
 
 	* DESCRIPTION: more explicit depends and suggests field in DESC
